tests/baselines/reference/for-of54.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of54.ts(1,15): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/for-ofStatements/for-of54.ts(2,9): error TS2481: Cannot initialize outer scoped variable 'v' in the same scope as block scoped declaration 'v'.


==== tests/cases/conformance/es6/for-ofStatements/for-of54.ts (2 errors) ====
    for (let v of []) {
                  ~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        var v = 0;
            ~
!!! error TS2481: Cannot initialize outer scoped variable 'v' in the same scope as block scoped declaration 'v'.
    }